# ahmed

./: CMakeLists.txt  HISTORY.txt  README
Doc/html/: ACA_8h_source.html  ClusterAlg_8h.html  ClusterAlg_8h_source.html  H_8h_source.html  annotated.html  apprx_8h_source.html  basmod_8h_source.html  bemblcluster_8h_source.html  bemcluster_8h_source.html  blas_8h_source.html  blcluster_8h.html  blcluster_8h_source.html  bllist_8h_source.html  classClusterAlg-members.html  classClusterAlg.html  classblcluster-members.html  classblcluster.html  classcluster-members.html  classcluster.html  classcluster1d__bbx-members.html  classcluster1d__bbx.html  classcluster2d__bbx-members.html  classcluster2d__bbx.html  classcluster2d__pca-members.html  classcluster2d__pca.html  classcluster3d__bbx-members.html  classcluster3d__bbx.html  classcluster3d__pca-members.html  classcluster3d__pca.html  classcluster__alg-members.html  classcluster__alg.html  classcluster__bbx-members.html  classcluster__bbx.html  classcluster__geo-members.html  classcluster__geo.html  classcluster__pca-members.html  classcluster__pca.html  classcluster__ref-members.html  classcluster__ref.html  classes.html  (+35 more)
Doc/latex/: ClusterAlg_8h.tex  annotated.tex  blcluster_8h.tex  classClusterAlg.eps  classClusterAlg.tex  classblcluster.tex  classcluster.eps  classcluster.tex  classcluster1d__bbx.eps  classcluster1d__bbx.tex  classcluster2d__bbx.eps  classcluster2d__bbx.tex  classcluster2d__pca.eps  classcluster2d__pca.tex  classcluster3d__bbx.eps  classcluster3d__bbx.tex  classcluster3d__pca.eps  classcluster3d__pca.tex  classcluster__alg.eps  classcluster__alg.tex  classcluster__bbx.eps  classcluster__bbx.tex  classcluster__geo.eps  classcluster__geo.tex  classcluster__pca.eps  classcluster__pca.tex  classcluster__ref.eps  classcluster__ref.tex  cluster_8h.tex  cluster__alg_8h.tex  cluster__pca_8h.tex  doxygen.sty  files.tex  hierarchy.tex  refman.tex
Examples/: LU_ND.cpp  PrecondBEM.cpp
H/: HLU.cpp  Hequilib.cpp  TH_solve.cpp  addHH.cpp  agglH.cpp  convCS_toH.cpp  initH.cpp  mblock.cpp  mblock_C.cpp  mblock_D.cpp  mblock_S.cpp  mblock_Z.cpp  mltaGeHGeH.cpp  mltaGeHGeHh.cpp  mltaGeHGeHh_toHeH.cpp  mltaGeHHeH.cpp  mltaGeHLtH.cpp  mltaGeHUtHh.cpp  mltaGeHVec.cpp  mltaGeHVec_omp.cpp  mltaGeHhDiHGeH.cpp  mltaGeHhDiHGeH_toHeH.cpp  mltaGeHhGeH.cpp  mltaGeHhGeH_toHeH.cpp  mltaHeHGeH.cpp  mltaLtHGeH.cpp  mltaUtHGeH.cpp  mltaUtHUtHh.cpp  nrmH.cpp  psoutH.cpp
Include/: ACA.h  ClusterAlg.h  H.h  apprx.h  basmod.h  bemblcluster.h  bemcluster.h  blas.h  blcluster.h  bllist.h  cluster.h  cluster_alg.h  cluster_bbx.h  cluster_pca.h  cmplx.h  dllist.h  helper.h  hmatrix.h  matgen_mpi.h  matgen_omp.h  matgen_sqntl.h  matrix.h  mblock.h  parallel.h  preserveVec.h  preserveVec2.h  quicksort.h  sllist.h  solvers.h  sparse.h  vec2d.h  vec3d.h  vectorIter.h
ND/: Blas_ND.cpp  CG_ND.cpp  HCholesky_ND.cpp  HLU_ND.cpp  Helpers_ND.cpp  TH_solve_ND.cpp  convCS_toH_ND.cpp  mltaGeHVec_ND.cpp  multaCRSvec_ND.cpp  subdivCRS_ND.cpp
basmod/: cputime.c  progress.cpp  realtime.c
cluster/: AdjMatrix.cpp  AdjMatrix.h  CS_getPathAndDist.cpp  CS_getPathAndDist.h  ClusterAlg.cpp  GraphNode.h  MGraph.h  Separator.cpp  Separator.h  binSearch.cpp  binSearch.h  blcluster.cpp  cluster_alg.cpp  dijkstra.h  specialSort.cpp  specialSort.h
cmake/: FindMetis.cmake  compilerflags  test_blas.cpp
parallel/: CG_MPI.cpp  GMRES_MPI.cpp  gen_blseq.cpp  mltaGeHVec_MPI.cpp  parallel.cpp  psoutH_MPI.cpp  transfH_MPI.cpp
solvers/: BiCGStab.cpp  CG.cpp  FGMRES.cpp  GMRES.cpp  MINRES.cpp
sparse/: CS_CRS2CRSSym.cpp  CS_CRSSym2CRS.cpp  CS_gen.cpp  CS_genDiagPrec.cpp  CS_getDist.cpp  CS_getRemotlyNode.cpp  CS_io.cpp  CS_is_connected.cpp  CS_perm.cpp  CS_transp.cpp  amux.cpp  amux_symm.cpp  atmux.cpp  genAdjM.cpp
